test: implement integration tests with Testcontainers
- Use Testcontainers setup with PostgreSQL 17 (postgres:17.5-alpine3.22)
- Add database migration and schema verification tests
- Implement integration tests for User, Role, and Workspace repositories
- Add end-to-end AuthenticationFlowIntegrationTest using MockMvc