@@ -6,6 +6,7 @@ import com.ekapasha.auth_service.role.infrastructure.persistence.entity.RolePerm
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -21,6 +22,8 @@ import static org.mockito.Mockito.verify;
 class RolePermissionWriteRepositoryImplTest {
 
   @Mock private JPARolePermissionRepository jpaRepository;
+  @Captor private ArgumentCaptor<List<RolePermissionEntity>> listCaptor;
+  @Captor private ArgumentCaptor<List<String>> codesCaptor;
 
   @Test
   void shouldDelegateAllWriteOperationsAndMapEntities() {
@@ -37,12 +40,10 @@ class RolePermissionWriteRepositoryImplTest {
     assertThat(singleCaptor.getValue().getPermissionCode()).isEqualTo("workspace.update");
 
     verify(jpaRepository).deleteByRoleIdAndPermissionCode(ROLE_ID, "workspace.update");
-    ArgumentCaptor<List<RolePermissionEntity>> listCaptor = ArgumentCaptor.forClass(List.class);
     verify(jpaRepository).saveAll(listCaptor.capture());
     assertThat(listCaptor.getValue()).hasSize(1);
-    assertThat(listCaptor.getValue().get(0).getPermissionCode()).isEqualTo("workspace.update");
+    assertThat(listCaptor.getValue().getFirst().getPermissionCode()).isEqualTo("workspace.update");
 
-    ArgumentCaptor<List<String>> codesCaptor = ArgumentCaptor.forClass(List.class);
     verify(jpaRepository).deleteByRoleIdAndPermissionCodeIn(eq(ROLE_ID), codesCaptor.capture());
     assertThat(codesCaptor.getValue()).containsExactlyInAnyOrder("workspace.update", "account.read");
   }
